# Cpp-Starter

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  readme.md
MathLib/: CMakeLists.txt
MathLib/src/: MathLib.cpp
Project/: CMakeLists.txt
Project/include/: struct.hpp
Project/src/: MathLib.cpp
Project/tests/: CMakeLists.txt  test.cpp
Tests/: CMakeLists.txt
docs/html/: annotated.html  classes.html  dir_000002_000001.html  dir_000003_000000.html  dir_000005_000000.html  dir_000005_000001.html  dir_000006_000003.html  dir_000007_000000.html  dir_000011_000009.html  dir_000013_000007.html  dir_2731a091419727ff0b9dbc540684dafd.html  dir_2731a091419727ff0b9dbc540684dafd_dep.map  dir_29b991757baefd4c9fee1250ebc1a608.html  dir_3075ae0af781e00334b850778d11b533.html  dir_3075ae0af781e00334b850778d11b533_dep.map  dir_3075ae0af781e00334b850778d11b533_dep.md5  dir_3137d5a23389289517bd5e0d06338240.html  dir_3137d5a23389289517bd5e0d06338240_dep.map  dir_3137d5a23389289517bd5e0d06338240_dep.md5  dir_33c78a012c8d08979f57a54a07694c46.html  dir_33c78a012c8d08979f57a54a07694c46_dep.map  dir_33c78a012c8d08979f57a54a07694c46_dep.md5  dir_384acb7929c10f351a84b4634d30271c.html  dir_384acb7929c10f351a84b4634d30271c_dep.map  dir_384acb7929c10f351a84b4634d30271c_dep.md5  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5ad7f572bbca03234e8e621e192fc099.html  dir_5ad7f572bbca03234e8e621e192fc099_dep.map  dir_5ad7f572bbca03234e8e621e192fc099_dep.md5  dir_5aff35bc0ecc8eeb452271d36ce2160b.html  dir_5aff35bc0ecc8eeb452271d36ce2160b_dep.map  dir_5aff35bc0ecc8eeb452271d36ce2160b_dep.md5  dir_62dcaabd7c71fbad28fee025b9f346b7.html  dir_62dcaabd7c71fbad28fee025b9f346b7_dep.map  dir_62dcaabd7c71fbad28fee025b9f346b7_dep.md5  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6f7e055eb1f9718eab0f0ea11ec134cd.html  dir_6f7e055eb1f9718eab0f0ea11ec134cd_dep.map  dir_6f7e055eb1f9718eab0f0ea11ec134cd_dep.md5  dir_8134e036958abec3d1496c9054c8e01b.html  (+38 more)
docs/html/d0/d51/: logger_8hpp__dep__incl.map  logger_8hpp__dep__incl.md5
docs/html/d0/d62/: Project_2src_2MathLib_8cpp.html  Project_2src_2MathLib_8cpp_source.html
docs/html/d1/d96/: MathLib_8cpp__incl.map  MathLib_8cpp__incl.md5
docs/html/d1/dd8/: structfoo-members.html
docs/html/d2/d61/: Math_01copy_8cpp_source.html
docs/html/d2/de3/: MathFunctions_8hpp.html  MathFunctions_8hpp_source.html
docs/html/d3/dad/: structfoo.html
docs/html/d3/dfc/: Library_2src_2MathLib_8cpp__incl.map  Library_2src_2MathLib_8cpp__incl.md5
docs/html/d4/d11/: MathFunctions_8hpp__dep__incl.map  MathFunctions_8hpp__dep__incl.md5
docs/html/d4/dad/: struct_8hpp_source.html
docs/html/d6/d09/: Math_8cpp.html  Math_8cpp_source.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+6 more)
(+22 files in other folders)
